--- a/templates/index.html
+++ b/templates/index.html
@@ -31,49 +31,123 @@
       </style>
     <body>
         <div class="lists-wrapper">
-            <ul id="lists">
-              {% for list in lists %}
-              <li>
-                <a href="/lists/{{ list.id }}">
-                  {{ list.name }}
-                </a>
-              </li>
-              {% endfor %}
-            </ul>
-          </div>
-        <div class="todos-wrapper">
-            <h4>{{ active_list.name }}</h4>
-            <form id="form">
-                <input type="text" id="description" name="description"/>
-                <input type="submit" value="Create"/>
+            <h4>TODO LISTS</h4>
+            <form action="/lists/create" method="POST" id="list-form">
+              <label for="todolist">Create List:</label>
+              <input type="text" name="todolist" id="todolist-input" placeholder="A new List" data-id="{{ active_list.id }}"/>
+              <button type="submit">Create List</button>
+            </form>        
+          <ul id="lists">
+            {% for list in lists %}
+            <li>
+              <input type="checkbox" data-id="{{ list.id }}" class="list-check-completed">
+              <a href="/lists/{{ list.id }}">{{ list.name }}</a>
+              <button class="delete-list" data-id="{{ list.id }}">&cross;</button>
+            </li>
+        {% endfor %}
+          </ul>
+        </div>
+        <div class="todos-wrapper">      
+            <h4>TODO ITEMS</h4>
+            <form action="/todos/create" method="POST" id="todo-form">
+              <input id="list_id" type="hidden" value="{{ active_list.id }}">
+              <label for="description">Create Task:</label>
+              <input id="description" type="text" name="description" placeholder="Task description"  />
+              <button type="submit">Create Task</button>
             </form>
-            <div class = "hidden" id = "error" class = "hidden" > Something went wrong! </div>
-            <ul id="todos">
-                {% for todo in todos%}
-                <li> 
-                    <input class = "check-completed"  data-id="{{ todo.id}}"  type = "checkbox" {% if todo.checked %} checked {% endif %}/>
-                    {{todo.description }}
-                    <button class="delete-button" id="delete-button" data-id="{{ todo.id }}">&cross;</button>
+            <div id="error" class="hidden">
+              An error occurred, please try again.
+            </div>   
+              <h4>{{ active_list.name }}</h4>
+              <ul id="todos">
+                {% for todo in todos %}
+                <li>
+                  <input data-id="{{ todo.id }}" class="todo-check-completed" type="checkbox" name="complete" id="complete" {% if todo.completed %} checked {%endif%} />
+                  {{ todo.description }}
+                  <button class="delete-todo" data-id="{{ todo.id }}">&cross;</button>
                 </li>
                 {% endfor %}
-            </ul>
-        </div>
+              </ul>
+      
+          </div>
         <script>
+            
+            let deleteBtns;
+            const listCheckboxes = document.querySelectorAll('.list-check-completed');
+            for (let i = 0; i < listCheckboxes.length; i++) {
+                const checkbox = listCheckboxes[i];
 
-            const deleteBtns = document.querySelectorAll('.delete-button');
-            for (let i = 0; i < deleteBtns.length; i++) {
-                const btn = deleteBtns[i];
-                btn.onclick = function(e) {
-                    const todoId = e.target.dataset['id'];
-                    fetch('/todos/' + todoId, {
-                        method: 'DELETE'
-                    }).then(
-                        function() 
-                        {
-                        const item = e.target.parentElement;
-                        item.remove();
-                    })        
+                checkbox.onchange = function (e) {
+                    if (e.target.checked) {
+                        const listId = e.target.dataset.id;
+
+                        fetch('/lists/' + listId + '/set-completed', {
+                            method: 'POST',
+                            headers: {
+                                'Content-Type': 'application/json'
+                            }
+                        })
+                        .then(function (jsonResponse) {
+                            document.getElementById('error').className = 'hidden';
+
+                            const todoCheckboxes = document.querySelectorAll('.todo-check-completed');
+
+                            for (let i = 0; i < todoCheckboxes.length; i++) {
+                                const checkbox = todoCheckboxes[i];
+
+                                checkbox.checked = true;
+                            }
+                        })
+                        .catch(function () {
+                            document.getElementById('error').className = '';
+                        })
+                    }
                 }
+            }
+
+            deleteBtns = document.querySelectorAll(".delete-todo");
+            for (let i = 0; i < deleteBtns.length; i++) {
+                const deleteBtn = deleteBtns[i];
+                deleteBtn.onclick = function(e) {
+                console.log("Delete event: ", e);
+                const todoId = e.target.dataset.id;
+                fetch('/todos/'+ todoId + '/delete',{
+                    method: 'DELETE'
+                }).then(function() {
+                    console.log('Parent?', e.target);
+                    const item = e.target.parentElement;
+                    item.remove();
+                    document.getElementById("error").className = "hidden";
+                    })
+                    .catch(function(e) {
+                    console.error(e);
+                    document.getElementById("error").className = "";
+                    });
+                };
+            }
+
+            deleteListBtns = document.querySelectorAll(".delete-list");
+
+            for (let i = 0; i < deleteListBtns.length; i++) {
+                const deleteBtn = deleteListBtns[i];
+                deleteBtn.onclick = function(e) {
+                console.log("Delete event: ", e);
+                const listId = e.target.dataset.id;
+
+                fetch('/lists/'+ listId + '/delete',{
+                    method: 'DELETE'
+                }).then(function() {
+                    console.log('Parent?', e.target);
+                    const item = e.target.parentElement;
+                    item.remove();
+                    document.getElementById("error").className = "hidden";
+                    window.location.reload(true);
+                    })
+                    .catch(function(e) {
+                    console.error(e);
+                    document.getElementById("error").className = "";
+                    });
+                };
             }
 
             const checkboxes = document.querySelectorAll('.check-completed');
@@ -97,48 +171,64 @@
                 }
             }
 
-            const descInput = document.getElementById('description');
-            document.getElementById('form').onsubmit = function(e) {
-               e.preventDefault();
-               const desc = descInput.value;
-               descInput.value = '';
-               fetch('/todos/create', {
-                            method: 'POST',
-                            body: JSON.stringify({
-                                'description': desc,
-                                'list_id': "{{ active_list.id }}"
-                               }),
-                            headers: 
-                            {
-                                'Content-Type': 'application/json'
-                            }
+
+            document.getElementById('list-form').onsubmit = function (e) {
+                e.preventDefault();
+
+                fetch('/lists/create', {
+                    method: 'POST',
+                    body: JSON.stringify({
+                        'name': document.getElementById('todolist-input').value
+                    }),
+                    headers: {
+                        'Content-Type': 'application/json'
+                    }
                 })
-                .then(response => response.json())
-                .then(jsonResponse => {
-                    const li = document.createElement('li');
-                    const checkbox = document.createElement('input');
-                    checkbox.className = 'check-completed';
-                    checkbox.type = 'checkbox';
-                    checkbox.setAttribute('data-id', jsonResponse.id);
-                    li.appendChild(checkbox);
+                .then(function (response) {
+                    return response.json();
+                })
+                .then(function (jsonResponse) {
+                    const liItem = document.createElement('LI');
 
-                    const text = document.createTextNode(' ' + jsonResponse.description);
-                    li.appendChild(text);
-
-                    const deleteBtn = document.createElement('button');
-                    deleteBtn.className = 'delete-button';
-                    deleteBtn.setAttribute('data-id', jsonResponse.id);
-                    deleteBtn.innerHTML = '&cross;';
-                    li.appendChild(deleteBtn);
-
-                    document.getElementById('todos').appendChild(li);
+                    liItem.innerHTML = jsonResponse['name'];
+                    document.getElementById('lists').appendChild(liItem);
                     document.getElementById('error').className = 'hidden';
+                    window.location.reload(true);
                 })
-                .catch(function() {
-                     document.getElementById('error').classname='';
-                      }
-                );
+                .catch(function (err) {
+                    document.getElementById('error').className = '';
+                })
             }
+
+
+            document.getElementById('todo-form').onsubmit = function (e) {
+        e.preventDefault();
+
+        fetch('/todos/create', {
+            method: 'POST',
+            body: JSON.stringify({
+                'description': document.getElementById('description').value,
+                'list_id': document.getElementById('list_id').value
+            }),
+            headers: {
+                'Content-Type': 'application/json'
+            }
+        })
+        .then(function (response) {
+            return response.json();
+        })
+        .then(function (jsonResponse) {
+            const liItem = document.createElement('LI');
+
+            liItem.innerHTML = jsonResponse['description'];
+            document.getElementById('todos').appendChild(liItem);
+            document.getElementById('error').className = 'hidden';
+            window.location.reload(true);
+        })
+        .catch(function () {
+            document.getElementById('error').className = '';
+        })
+      }
                 
             </script>
     </body>
